--- a/[ProjectHeroPicker]MainFunctionPage.xaml
+++ b/[ProjectHeroPicker]MainFunctionPage.xaml
@@ -88,12 +88,12 @@
                 </Grid>
             </AbsoluteLayout>
         </AbsoluteLayout>
-            <ListView x:Name="listView" 
+        <ListView x:Name="listView" 
             IsGroupingEnabled="true"
             GroupDisplayBinding="{Binding Title}"
             SeparatorColor="Black" 
             HasUnevenRows="true"
-            AbsoluteLayout.LayoutBounds="0.5, 1, 1, 0.85"
+            AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 0.7"
             AbsoluteLayout.LayoutFlags="All"
             ItemTapped="Handle_ItemTapped"
             ItemSelected="Handle_ItemSelected"
@@ -168,5 +168,99 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
+        <AbsoluteLayout AbsoluteLayout.LayoutBounds="0, 1, 1, 0.15"
+            AbsoluteLayout.LayoutFlags="All">
+            <BoxView Color="Black" Opacity="0.9"
+                AbsoluteLayout.LayoutBounds="0, 0, 1, 0.2"
+                AbsoluteLayout.LayoutFlags="All" />
+            <AbsoluteLayout AbsoluteLayout.LayoutBounds="0, 0, 1, 0.2"
+                AbsoluteLayout.LayoutFlags="All">
+                <Label Text="YourPick" FontAttributes="Bold"
+                    TextColor="White" FontSize="12"
+                    HorizontalOptions="Center"
+                    VerticalOptions="Center"
+                    AbsoluteLayout.LayoutBounds="0, 0, 68, 1"
+                    AbsoluteLayout.LayoutFlags="PositionProportional, HeightProportional" />
+                <Grid AbsoluteLayout.LayoutBounds="1, 0, 0.82, 1"
+                    AbsoluteLayout.LayoutFlags="All"
+                    VerticalOptions="Center"
+                    ColumnSpacing="5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Label Grid.Row="0" Grid.Column="0" FontSize="12"
+                        Text="Total" FontAttributes="Bold" TextColor="White"
+                        HorizontalOptions="Center"/>
+                    <Label Grid.Row="0" Grid.Column="1" FontSize="12"
+                        Text="Vs.Dom" FontAttributes="Bold" TextColor="White"
+                        HorizontalOptions="Center"/>
+                    <Label Grid.Row="0" Grid.Column="2" FontSize="12"
+                        Text="Vs.Pom" FontAttributes="Bold" TextColor="White"
+                        HorizontalOptions="Center"/>
+                    <Label Grid.Row="0" Grid.Column="3" FontSize="12"
+                        Text="Vs.Nec" FontAttributes="Bold" TextColor="White"
+                        HorizontalOptions="Center"/>
+                    <Label Grid.Row="0" Grid.Column="4" FontSize="12"
+                        Text="Vs.Sni" FontAttributes="Bold" TextColor="White"
+                        HorizontalOptions="Center"/>
+                    <Label Grid.Row="0" Grid.Column="5" FontSize="12"
+                        Text="Vs.Vip" FontAttributes="Bold" TextColor="White"
+                        HorizontalOptions="Center"/>
+                </Grid>
+            </AbsoluteLayout>
+            <AbsoluteLayout AbsoluteLayout.LayoutBounds="0, 1, 1, 0.8"
+                AbsoluteLayout.LayoutFlags="All">
+                <Button Text="+" TextColor="White"
+                    AbsoluteLayout.LayoutBounds="5, 0.5, 60, 60"
+                    AbsoluteLayout.LayoutFlags="YProportional"
+                    BackgroundColor="Gray" BorderRadius="3" FontSize="40"/>
+                <Grid Padding="10" ColumnSpacing="40"
+                    AbsoluteLayout.LayoutBounds="1, 0, 0.82, 1"
+                    AbsoluteLayout.LayoutFlags="All"
+                    HorizontalOptions="Center"
+                    VerticalOptions="Center">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Label Grid.Row="0" Grid.Column="0"
+                        Text="6" TextColor="Red" 
+                        HorizontalOptions="Start"
+                        VerticalOptions="Center"/>
+                    <Label Grid.Row="0" Grid.Column="1"
+                        Text="1" TextColor="Red"
+                        HorizontalOptions="Start"
+                        VerticalOptions="Center"/>
+                    <Label Grid.Row="0" Grid.Column="2"
+                        Text="2" TextColor="Red"
+                        HorizontalOptions="Start"
+                        VerticalOptions="Center"/>
+                    <Label Grid.Row="0" Grid.Column="3"
+                        Text="3" TextColor="Red"
+                        HorizontalOptions="Start"
+                        VerticalOptions="Center"/>
+                    <Label Grid.Row="0" Grid.Column="4"
+                        Text="4" TextColor="Red"
+                        HorizontalOptions="Start"
+                        VerticalOptions="Center"/>
+                    <Label Grid.Row="0" Grid.Column="5"
+                        Text="5" TextColor="Red"
+                        HorizontalOptions="Start"
+                        VerticalOptions="Center"/>
+                </Grid>
+            </AbsoluteLayout>
+        </AbsoluteLayout>
     </AbsoluteLayout>
 </ContentPage>
