--- a/[RelativeLayout]PayPage2.xaml
+++ b/[RelativeLayout]PayPage2.xaml
@@ -25,7 +25,7 @@
             <Label Text="$11.95" TextColor="#33353a" FontSize="60"
                 FontAttributes="Bold" />
             <Button Text="Add $7.99 Credit" TextColor="White"
-                BackgroundColor="#1695A3"
+                BackgroundColor="#1695A3" Clicked="Handle_Clicked"
                 BorderRadius="15" HeightRequest="30"
                 FontSize="15"
                 FontAttributes="Bold" />
