--- a/[Grid1]DialPage.xaml
+++ b/[Grid1]DialPage.xaml
@@ -19,36 +19,36 @@
         
         <Button Grid.Row="1" Grid.Column="0" Text="1" TextColor="#28282c" 
             FontSize="30" BorderRadius="30"
-            BackgroundColor="#fff" Clicked="Handle_Clicked1" />
+            BackgroundColor="#fff" Clicked="Handle_Clicked" />
         <Button Grid.Row="1" Grid.Column="1" Text="2" TextColor="#28282c" 
             FontSize="30" BorderRadius="30"
-            BackgroundColor="#fff" Clicked="Handle_Clicked2"/>
+            BackgroundColor="#fff" Clicked="Handle_Clicked"/>
         <Button Grid.Row="1" Grid.Column="2" Text="3" TextColor="#28282c" 
             FontSize="30" BorderRadius="30"
-            BackgroundColor="#fff" Clicked="Handle_Clicked3"/>
+            BackgroundColor="#fff" Clicked="Handle_Clicked"/>
         <Button Grid.Row="2" Grid.Column="0" Text="4" TextColor="#28282c" 
             FontSize="30" BorderRadius="30"
-            BackgroundColor="#fff" Clicked="Handle_Clicked4"/>
+            BackgroundColor="#fff" Clicked="Handle_Clicked"/>
         <Button Grid.Row="2" Grid.Column="1" Text="5" TextColor="#28282c" 
             FontSize="30" BorderRadius="30"
-            BackgroundColor="#fff" Clicked="Handle_Clicked5"/>
+            BackgroundColor="#fff" Clicked="Handle_Clicked"/>
         <Button Grid.Row="2" Grid.Column="2" Text="6" TextColor="#28282c" 
             FontSize="30" BorderRadius="30"
-            BackgroundColor="#fff" Clicked="Handle_Clicked6"/>
+            BackgroundColor="#fff" Clicked="Handle_Clicked"/>
         <Button Grid.Row="3" Grid.Column="0" Text="7" TextColor="#28282c" 
             FontSize="30" BorderRadius="30"
-            BackgroundColor="#fff" Clicked="Handle_Clicked7"/>
+            BackgroundColor="#fff" Clicked="Handle_Clicked"/>
         <Button Grid.Row="3" Grid.Column="1" Text="8" TextColor="#28282c" 
             FontSize="30" BorderRadius="30"
-            BackgroundColor="#fff" Clicked="Handle_Clicked8"/>
+            BackgroundColor="#fff" Clicked="Handle_Clicked"/>
         <Button Grid.Row="3" Grid.Column="2" Text="9" TextColor="#28282c" 
             FontSize="30" BorderRadius="30"
-            BackgroundColor="#fff" Clicked="Handle_Clicked9"/>
+            BackgroundColor="#fff" Clicked="Handle_Clicked"/>
         <Button Grid.Row="4" Grid.Column="1" Text="0" TextColor="#28282c" 
             FontSize="30" BorderRadius="30"
-            BackgroundColor="#fff" Clicked="Handle_Clicked0"/>
+            BackgroundColor="#fff" Clicked="Handle_Clicked"/>
         <Button Grid.Row="5" Grid.ColumnSpan="3" Text="Dial" TextColor="#28282c" 
             FontSize="30" BorderRadius="30" BackgroundColor="#96ca2d"
-            Clicked="Handle_Clicked"/>
+            Clicked="Handle_Clicked_Dail"/>
     </Grid>
 </ContentPage>
